--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,9 @@ permissions:
   contents: write
 jobs:
   build-and-deploy:
-    working-directory: ./city-well-management
+    defaults:
+      run:
+        working-directory: ./city-well-management
     concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
     runs-on: ubuntu-latest
     steps:
